--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 
   </div>
 
-  <p> Welcome to OOF CLIKER, hope you like this game!!!!!!  <br>Fun fact this  game was made in scratch</p><p>JK</p>
+  <p> Welcome to OOF CLIKER!, hope you like this game!!!!!!  <br>Fun fact this  game was made in scratch</p><p>JK</p>
 </body>
 </html>
