made a website yay!!!

--- a/index.html
+++ b/index.html
@@ -1,24 +1,43 @@
+<!DOCTYPE html>
 <html>
 <head>
-<style>
+  <style>
 
-  body {
-    background-color: rgb(1000, 1000, 1000);
-  }
+    body {
+      background-image: url("https://rolandgroza.com/images/tea-leaf-clip-art-6.png");
+      background-size: 30%;
 
-</style>
-<title>oof cliker!!</title>
+    }
+
+    .intro {
+      text-align: center;
+    }
+
+    .bottom {
+      text-align:  center;
+    }
+
+  </style>
+  <title>t-lieth</title>
+
+  <meta charset="utf-8"/>
+  <link rel="stylesheet" type="text/css" href="main.css">
+
 </head>
 <body>
+  <div class="intro">
+    <a href='gamepage.html'><button>game page !!</button></a>
+      <a href='activities.html'><button>activities !!</button></a>
+    <h1>walcome to t-leith</h1>
 
-  <h1> Welcome to OOF CLICKER </h1>
+      <h3>hope you enjoy </h3>
 
-  <div id="scratch-games" class="container">
-
-    <iframe allowtransparency="true" width="1200" height="700" src="https://scratch.mit.edu/projects/embed/290112419/?autostart=false" frameborder="0" allowfullscreen></iframe>
-
-  </div>
-
-  <p> Welcome to OOF CLIKER!, hope you like this game!!!!!!  <br>Fun fact this  game was made in scratch</p><p>JK</p>
-</body>
+      <p>in this website you will be very entertained. where have got lots of staff for you to do<br>. like if you go on are games page you can paly meny meny games for days and we can show you some acktivatys that you could do at home with frends. </p>
+        <p>so go on and click those botton!!</p>
+   </div>
+  <div class="bottom">
+    <h3>MEME OF THE WEEK:</h3>
+      <img src="catmeme.png" alt="memes">
+    </div>
+  </body>
 </html>
