--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
       text-align: center;
     }
 
+    .ram {
+      height: 100px;
+      width: 100px;
+      display: inline-block;
+    }
+
     .bottom {
       text-align:  center;
     }
@@ -35,9 +41,23 @@
       <p>in this website you will be very entertained. where have got lots of staff for you to do<br>. like if you go on are games page you can paly meny meny games for days and we can show you some acktivatys that you could do at home with frends. </p>
         <p>so go on and click those botton!!</p>
    </div>
+   <h1>Wont a challeng?</h1>
+   <p>1.have you ever made a clay ram? <img class="ram" src="ram.jpg" alt="challeng"><label class="container">One
+  <input type="checkbox" checked="checked">
+  <span class="checkmark"></span>
+</label></p>
+   <p>2.or do you wont to do something on the screen how bout finish 50 games of fill! download on tablet,phone,ipad,and ipod<label class="container">One
+  <input type="checkbox" checked="checked">
+  <span class="checkmark"></span>
+</label></p>
+   <p>3.have you ever nitted a scarf extra challeng make it have a five diforent colour  <label class="container">One
+  <input type="checkbox" checked="checked">
+  <span class="checkmark"></span>
+</label></p>
   <div class="bottom">
     <h3>MEME OF THE WEEK:</h3>
       <img src="catmeme.png" alt="memes">
+
     </div>
   </body>
 </html>
