--- a/index.html
+++ b/index.html
@@ -1,28 +1,22 @@
-<!DOCTYPE html>
+<!DOCTYPE html>bnb
 <html>
 <head>
   <style>
-
     body {
-      background-image: url("https://rolandgroza.com/images/tea-leaf-clip-art-6.png");
+      background-image: url("https://i.pinimg.com/originals/2a/3b/17/2a3b175c8b6752a62a6f6915ff472f8c.jpg");
       background-size: 30%;
-
     }
-
     .intro {
       text-align: center;
     }
-
     .ram {
       height: 100px;
       width: 100px;
       display: inline-block;
     }
-
     .bottom {
       text-align:  center;
     }
-
   </style>
   <title>t-lieth</title>
 
@@ -33,7 +27,6 @@
 <body>
   <div class="intro">
     <a href='gamepage.html'><button>game page !!</button></a>
-      <a href='activities.html'><button>activities !!</button></a>
     <h1>walcome to t-leith</h1>
 
       <h3>hope you enjoy </h3>
@@ -41,22 +34,53 @@
       <p>in this website you will be very entertained. where have got lots of staff for you to do<br>. like if you go on are games page you can paly meny meny games for days and we can show you some acktivatys that you could do at home with frends. </p>
         <p>so go on and click those botton!!</p>
    </div>
-   <h1>Wont a challeng?</h1>
-   <p>1.have you ever made a clay ram? <img class="ram" src="ram.jpg" alt="challeng"><label class="container">One
-  <input type="checkbox" checked="checked">
+   <html>
+   <head>
+
+     <style>
+
+       body {
+         background-image: url("https://www.gannett-cdn.com/-mm-/735f994d042682a89f8a4f2fcfd5ea505f3dc1cd/c=0-127-2995-1819/local/-/media/2015/10/31/USATODAY/USATODAY/635818943680464639-103115cute-kitty.jpg?width=3200&height=1680&fit=crop");
+           background-size: 100%;
+       }
+
+       .center {
+         text-align: center;
+       }
+
+     </style>
+       <title>t-lieth</title>
+
+   </head>
+     <body>
+
+         <div class="center"
+           <h6>activities</h6>
+                      <h2> ACTIVITES for the week:<br>HAVE YOU RAED THIS BOOK????? see thes books below IF YOU ARE BORED read thes books </h2>
+                         <h4>THE TRAIL OF MORRIGEN CROW (Jessaca Townsend)<br> PERCY JACKSON AND THE LIGHTenING THIEF (rick riodin) <br> mortal engines (Phillip Reev) <br> magnus chase (rick riodin)</h4>
+
+
+    <h1>Wont a challeng?</h1>
+      <p><font color="purple">1.have you ever made a clay ram? </font> <img class="ram" src="ram.jpg" alt="challeng"><label class="container"> One
+    <input type="checkbox">
+  <span class="checkmark"></span>
+    </label></p>
+      <p><font color="blue">2.or do you wont to do something on the screen how bout finish 50 games of fill! download on tablet,phone,ipad,and ipod</font><label class="container"> two
+    <input type="checkbox">
+  <span class="checkmark"></span>
+    </label></p>
+   <p><font color="darkgreen">3.have you ever nitted a scarf extra challeng make it have a five diforent colour</font><label class="container"> three
+  <input type="checkbox">
   <span class="checkmark"></span>
 </label></p>
-   <p>2.or do you wont to do something on the screen how bout finish 50 games of fill! download on tablet,phone,ipad,and ipod<label class="container">One
-  <input type="checkbox" checked="checked">
+   <p><font color="pink">4.you think you can make a tree hut?</font><label class="container"> four
+  <input type="checkbox">
   <span class="checkmark"></span>
-</label></p>
-   <p>3.have you ever nitted a scarf extra challeng make it have a five diforent colour  <label class="container">One
-  <input type="checkbox" checked="checked">
-  <span class="checkmark"></span>
-</label></p>
+</labal</p>
+
   <div class="bottom">
-    <h3>MEME OF THE WEEK:</h3>
-      <img src="catmeme.png" alt="memes">
+    <h3><font color="red">MEME OF THE WEEK</font></h3>
+      <img src="catmeme.jpg" alt="memes">
 
     </div>
   </body>
