--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 <body>
   <div class="intro">
     <a href='gamepage.html'><button>game page !!</button></a>
+    <a href='meme.html'><button>COMEING SOON !!</button></a>
     <h1>walcome to t-leith</h1>
+
 
       <h3>hope you enjoy </h3>
 
