--- a/meme.html
+++ b/meme.html
@@ -1,13 +1,39 @@
 <html>
 <head>
-  <body>
+  <body
     <h1>WELCOME TO THE ALCOVE OF MEMES </h1>
       <h6>and funny jokes</h6>
-      <h3>amimal memes:</h1>
-        <img src="catmeme.jpg" alt="# fluffy">
-          <img src="catmeme.png" alt="a cats apinion">
-            <img src="dogmeme.jpg" alt="memes">
-              <img src="ducklife.jpg" alt="memes">
+          <a href='index.html'><button>back to home page</button></a>
+
+
+            <h3>amimal memes:</h1>
+              <img src="catmeme.jpg" alt="# fluffy">
+                <img src="catmeme.png" alt="a cats apinion">
+                  <img src="dogmeme.jpg" alt="memes">
+                    <img src="ducklife.jpg" alt="memes">
+                      <img src="a.jpg" alt="memes">
+                        <img src="b.jpg" alt="memes">
+                          <img src="w.jpg" alt="memes">
+                            <img src="l.jpg" alt="memes">
+
+
+
+    <h3>hoooomem memes:</h3>
+      <img src="hoo.png" alt="memes">
+          <img src="cool.jpg" alt="memes">
+              <img src="emoji.png" alt="memes">
+                <img src="m.jpg" alt="memes">
+                  <img src="1.jpg" alt="memes">
+                    <img src="v.jpg" alt="memes">
+                      <img src="stuff.jpg" alt="memes">
+
+
+    <h3>school memes</h3>
+      <img src="baby.jpg" alt="memes">
+        <img src="g.jpg" alt="memes">
+            <img src="school.jpg" alt="memes">
+              <img src="k.jfif" alt="memes">
+                <img src="fun.jpg" alt="memes">
 
 
 </body>
