--- a/gamepage.html
+++ b/gamepage.html
@@ -1,27 +1,78 @@
-<html>
-<head>
-<style>
+    <html>
+    <head>
+    <style>
 
-  body {
-    background-color: rgb(5, 6, 100);
-  }
+      body {
+        background-color: lawngreen;
+      }
 
-</style>
-<title>oof cliker</title>
-
-
-</head>
-<body>
-
-  <h1> Welcome to the game page  </h1>
+    </style>
+    <title><font coler="white">t-lieth gamepage</font></title>
 
 
-    <!--<iframe allowtransparency="true" width="120" height="70" src="https://scratch.mit.edu/projects/embed/290112419/?autostart=false" frameborder="0" allowfullscreen></iframe>-->
-    <a href="./oof cliker page two.html"><img src="2019-03-14.png" width="200" height="200" alt="Oof clicker"></a>
+    </head>
+    <body>
+
+      <header>
+        <h1>game page<h1>
+      </header>
+      <font face="Allura" color="green">Welcome to the game page!</font>
 
 
 
-   <p> Welcome to OOF CLIKER, hope you like this game!!!!!!  <br>Fun fact this  game was made in scratch</p><p>JK</p>
-     <a href='index.html'><button>back to home page !!</button></a>
-</body>
-</html>
+        <!--<iframe allowtransparency="true" width="120" height="70" src="https://scratch.mit.edu/projects/embed/290112419/?autostart=false" frameborder="0" allowfullscreen></iframe>-->
+        <center><a href="./oof cliker page two.html"><img src="2019-03-14.png" width="300" height="300" alt="Oof clicker"><h1>oof cliker</h1> <p> Welcome to OOF CLIKER,<br> hope you like this game!!!!!!  <br>Fun fact this  game was made in <br>scratch</p><p>JK</p></a></center>
+        <center><a href="fruit.html"><img src="5.jpeg" width="300" height="300" alt="WHAT FRUIT ARE YOU???!!!!"><h1>what fruit are you??</h1><p>in this game you will find out what frurit you are, by ansering the quston we will determin what fruit you are HAVE FUN <p></a></center>
+          <center><a href="mana.html"><img src="shaf.png" width="300" height="300" alt="Oof clicker"><h1>cube miner</h1> <p> welcome to miners life,<br>  <br>Fun fact this  game was made in scratch<br></p><p>JK</p></a></center>
+
+
+         <a href='index.html'><button>back to home page !!</button></a>
+    </body>
+    </html>
+    <style>
+
+header {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        margin: 0;
+        background: 	goldenrod;
+        color: 	darkviolet;
+      }
+
+    .intro {
+    }
+    .backgroundText{
+      width: 100%;
+      height: 100%;
+      padding: 10000000000000000000px;
+    }
+    body {
+    background-image: url("g.gif");
+    background-size: 100%
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    margin: 0;
+
+
+    div {
+      width: 300px;
+      border: 15px solid green;
+      padding: 50px;
+      margin: 20px;
+    }
+    }
+    }
+    .ram {
+      height: 100px
+      width: 100px;
+      display: inline-block;
+    }
+    .bottom {
+
+    }
+
+    <body>
+    <header>
+      body {
