--- a/index.html
+++ b/index.html
@@ -1,89 +1,95 @@
-<!DOCTYPE html>bnb
+<!DOCTYPE html>
 <html>
-<head>
-  <style>
-    body {
-      background-image: url("https://i.pinimg.com/originals/2a/3b/17/2a3b175c8b6752a62a6f6915ff472f8c.jpg");
-      background-size: 30%;
-    }
-    .intro {
-      text-align: center;
-    }
-    .ram {
-      height: 100px;
-      width: 100px;
-      display: inline-block;
-    }
-    .bottom {
-      text-align:  center;
-    }
-  </style>
-  <title>t-lieth</title>
 
-  <meta charset="utf-8"/>
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <head>
+    <meta charset="utf-8"/>
+    <title>t-lieth</title>
+    <!-- <link rel="stylesheet" type="text/css" href="main.css"> -->
 
-</head>
-<body>
-  <div class="intro">
-    <a href='gamepage.html'><button>game page !!</button></a>
-    <a href='meme.html'><button>COMEING SOON !!</button></a>
-    <h1>walcome to t-leith</h1>
+    <style>
 
+      .center {
+        text-align: center;
+      }
 
-      <h3>hope you enjoy </h3>
+      header {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        margin: 0;
+        background: turquoise;
+        color: 	darkviolet;
+      }
 
-      <p>in this website you will be very entertained. where have got lots of staff for you to do<br>. like if you go on are games page you can paly meny meny games for days and we can show you some acktivatys that you could do at home with frends. </p>
-        <p>so go on and click those botton!!</p>
-   </div>
-   <html>
-   <head>
+      .backgroundText {
+        width: 100%;
+        height: 60%;
+        padding: 200px;
+      }
 
-     <style>
+      body {
+        background-image: url("f.gif");
+        background-size: 100%;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        margin: 0;
+      }
 
-       body {
-         background-image: url("https://www.gannett-cdn.com/-mm-/735f994d042682a89f8a4f2fcfd5ea505f3dc1cd/c=0-127-2995-1819/local/-/media/2015/10/31/USATODAY/USATODAY/635818943680464639-103115cute-kitty.jpg?width=3200&height=1680&fit=crop");
-           background-size: 100%;
-       }
+      .ram {
+        height: 100px;
+        width: 100px;
+        display: inline-block;
+      }
 
-       .center {
-         text-align: center;
-       }
+      .bottom {
+        text-align:  center;
+      }
 
-     </style>
-       <title>t-lieth</title>
+    
 
-   </head>
-     <body>
+    </style>
+  </head>
 
-         <div class="center"
-           <h6>activities</h6>
-                      <h2> ACTIVITES for the week:<br>HAVE YOU RAED THIS BOOK????? see thes books below IF YOU ARE BORED read thes books </h2>
-                         <h4>THE TRAIL OF MORRIGEN CROW (Jessaca Townsend)<br> PERCY JACKSON AND THE LIGHTenING THIEF (rick riodin) <br> mortal engines (Phillip Reev) <br> magnus chase (rick riodin)</h4>
+  <body>
 
 
-    <h1>Wont a challeng?</h1>
-      <p><font color="purple">1.have you ever made a clay ram? </font> <img class="ram" src="ram.jpg" alt="challeng"><label class="container"> One
-    <input type="checkbox">
-  <span class="checkmark"></span>
-    </label></p>
-      <p><font color="blue">2.or do you wont to do something on the screen how bout finish 50 games of fill! download on tablet,phone,ipad,and ipod</font><label class="container"> two
-    <input type="checkbox">
-  <span class="checkmark"></span>
-    </label></p>
-   <p><font color="darkgreen">3.have you ever nitted a scarf extra challeng make it have a five diforent colour</font><label class="container"> three
-  <input type="checkbox">
-  <span class="checkmark"></span>
-</label></p>
-   <p><font color="pink">4.you think you can make a tree hut?</font><label class="container"> four
-  <input type="checkbox">
-  <span class="checkmark"></span>
-</labal</p>
+    <header>
+      <h1><font color="white">Welcome to t-leith</font></h1>
+      <h4><font color="white">Hope you enjoy </font></h4>
+    </header>
 
-  <div class="bottom">
-    <h3><font color="red">MEME OF THE WEEK</font></h3>
-      <img src="catmeme.jpg" alt="memes">
+    <div id="backgroundText">
+        <a href='gamepage.html'><button>Game page!!</button></a>
+        <a href='meme.html'><button>MEMEs!!</button></a>
+        <a href='river.html'><button>comeing soon</button></a>
+      </div>
+        <div class="center"
+    <title>t-lieth</title>
 
+    <h1><font color="glod"><welcome</font></h1>
+    <p><font color="white">in this website you will be very entertained. where have got lots of stuff for you to do<br>. like if you go on our games page you can paly meny meny games for days and we can show you some acktivatys that you could do at home with frends.</font></p>
+    <p><font color="white">so go on and click those botton!!</font></p>
+
+    <div class="intro-block">
+
+        <h6><font color="white">activities</font></h6>
+        <h2><font color="white">ACTIVITES for the week:<br>HAVE YOU RAED THIS BOOK????? see thes books below IF YOU ARE BORED read thes books </font></h2>
+        <p><font color="white">THE TRAIL OF MORRIGEN CROW (Jessaca Townsend)<br> PERCY JACKSON AND THE LIGHTENING THIEF (rick riodin) <br> MORTAL ENGINES (Phillip Reev) <br> MAGNUS CHASE (rick riodin)<br>THE CANE CRONICLES (rick riodin)<br>HARRY POTTER (no more info needed)<br>wings of fire book 1,2,3,4,5,6,7,8,9,10,11,12,13(tui t. sutherlan)</font></p>
+
+        <h1><font color="white">Wont a challeng?</font></h1>
+        <p><font color="purple">1.have you ever made a clay  ram? </font><img class="ram" src="ram.jpg" alt="challeng"><labelclass="container"> One <input type="checkbox"> <span class="checkmark"></span></label></p>
+
+        <p><font color="blue">2.or do you wont to do something on thescreen how bout finish 50 games of fill! download on tablet,phone,ipad,andipod</font><label class="container"> two <input type="checkbox"> <spanclass="checkmark"></span> </label></p>
+        <p><font color="darkgreen">3.have you ever nitted a scarf extra challeng make it have a five diforentcolour</font><label class="container"> three <input type="checkbox"> <spanclass="checkmark"></span> </label></p>
+        <p><font color="pink">4.you think you can make a tree hut?</font><label class="container"> four <inputtype="checkbox"> <span class="checkmark"></span> </labal</p>
+      </div>
     </div>
+
+    <div class="bottom">
+      <h3><font color="white">MEME OF THE WEEK</font></h3>
+      <img src="u.webp" alt="memes">
+    </div>
+
   </body>
 </html>
