--- a/meme.html
+++ b/meme.html
@@ -1,43 +1,103 @@
 <html>
+
 <head>
-  <body
-    <h1>WELCOME TO THE ALCOVE OF MEMES </h1>
-      <h6>and funny jokes</h6>
-          <a href='index.html'><button>back to home page</button></a>
 
 
-            <h3>amimal memes:</h1>
-              <img src="catmeme.jpg" alt="# fluffy">
-                <img src="catmeme.png" alt="a cats apinion">
-                  <img src="dogmeme.jpg" alt="memes">
-                    <img src="ducklife.jpg" alt="memes">
-                      <img src="a.jpg" alt="memes">
-                        <img src="b.jpg" alt="memes">
-                          <img src="w.jpg" alt="memes">
-                            <img src="l.jpg" alt="memes">
+  <style>
 
+    body > header {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      margin: 0;
+      background: 	magenta;
+      color: white;
+    }
+  </style>
+</head>
 
+<body>
+  <header>
+    <h1><font color="maroon">Memes!!!!</font></h1>
+  </header>
 
-    <h3>hoooomem memes:</h3>
-      <img src="hoo.png" alt="memes">
-          <img src="cool.jpg" alt="memes">
-              <img src="emoji.png" alt="memes">
-                <img src="m.jpg" alt="memes">
-                  <img src="1.jpg" alt="memes">
-                    <img src="v.jpg" alt="memes">
-                      <img src="stuff.jpg" alt="memes">
-
-
-    <h3>school memes</h3>
-      <img src="baby.jpg" alt="memes">
-        <img src="g.jpg" alt="memes">
-            <img src="school.jpg" alt="memes">
-              <img src="k.jfif" alt="memes">
-                <img src="fun.jpg" alt="memes">
-                  <img src="8a.jpeg" alt="memes">
+  <div class="center"
 
 
 
+  <h1>
+    <font color="white">WELCOME TO THE ALCOVE OF MEMES </font>
+  </h1>
+  <h6>
+    <font color="white">and funny jokes</font>
+  </h6>
+  <a href='index.html'><button>back to home page</button></a>
+
+
+  <h1>
+    <font color="white">amimal memes:</font>
+  </h1>
+  <img src="catmeme.jpg" alt="# fluffy">
+  <img src="catmeme.png" alt="a cats apinion">
+  <img src="dogmeme.jpg" alt="memes">
+  <img src="ducklife.jpg" alt="memes">
+  <img src="a.jpg" alt="memes">
+  <img src="b.jpg" alt="memes">
+  <img src="w.jpg" alt="memes">
+  <img src="l.jpg" alt="memes">
+
+
+
+  <h1>
+    <font color="white">hoooomem memes:</font>
+  </h1>
+  <img src="hoo.png" alt="memes">
+  <img src="cool.jpg" alt="memes">
+  <img src="emoji.png" alt="memes">
+  <img src="m.jpg" alt="memes">
+  <img src="1.jpg" alt="memes">
+  <img src="v.jpg" alt="memes">
+  <img src="stuff.jpg" alt="memes">
+
+
+  <h3>
+    <font color="white">school memes</font>
+  </h3>
+  <img src="baby.jpg" alt="memes">
+  <img src="g.jpg" alt="memes">
+  <img src="school.jpg" alt="memes">
+  <img src="k.jfif" alt="memes">
+  <img src="fun.jpg" alt="memes">
+  <img src="8a.jpeg" alt="memes">
+
+  <style>
+
+  .center {
+    text-align: center;
+  }
+
+
+
+    body {
+      background-image: url("1.jpeg");
+      background-size: 100%;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      margin: 0;
+    }
+
+  
+
+    .ram {
+      height: 100px;
+      width: 100px;
+      display: inline-block;
+    }
+
+
+  </style>
 
 </body>
+
 </html>
