--- a/oof cliker page two.html
+++ b/oof cliker page two.html
@@ -1,26 +1,59 @@
-  <html>
-<head>
-<style>
+      <html>
+    <head>
+    <style>
 
-  body {
-    background-color: rgb(200, 700, 0);
-  }
+    </style>
+    <title><font color="white">oof cliker!!</font></title>
 
-</style>
-<title>oof cliker!!</title>
+      <title>t-lieth</title>
+    </head>
+    <body>
 
-
-</head>
-<body>
-
-  <h1> Welcome to OOF CLICKER </h1>
+      <h1><font color="white"> Welcome to OOF CLICKER </font></h1>
 
 
-    <iframe allowtransparency="true" width="1200" height="700" src="https://scratch.mit.edu/projects/embed/290112419/?autostart=false" frameborder="0" allowfullscreen></iframe>
+        <iframe allowtransparency="true" width="1200" height="700" src="https://scratch.mit.edu/projects/embed/290112419/?autostart=false" frameborder="0" allowfullscreen></iframe>
 
 
 
-   <p> Welcome to OOF CLIKER, hope you like this game!!!!!!  <br>Fun fact this  game was made in scratch</p><p>JK</p>
-   <a href='gamepage.html'><button>back game page !!</button></a>
-</body>
-  </html>
+       <p><font color="white"> Welcome to OOF CLIKER, hope you like this game!!!!!!  <br>Fun fact this  game was made in scratch</font></p><p>JK</p>
+       <a href='gamepage.html'><button>back game page !!</button></a>
+
+
+
+       </html>
+       <style>
+       .intro {
+       }
+       .backgroundText{
+         width: 100%;
+         height: 60%;
+         padding: 200px;
+       }
+       body {
+       background-image: url("u.jpeg");
+       background-size: 100%
+       background-repeat: no-repeat;
+       background-attachment: fixed;
+
+
+       div {
+         width: 300px;
+         border: 15px solid green;
+         padding: 50px;
+         margin: 20px;
+       }
+     }
+       }
+       .ram {
+         height: 100px
+         width: 100px;
+         display: inline-block;
+       }
+       .bottom {
+
+       }
+
+       <body>
+       <header>
+         body {
