--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         text-align:  center;
       }
 
-    
+
 
     </style>
   </head>
@@ -62,7 +62,8 @@
     <div id="backgroundText">
         <a href='gamepage.html'><button>Game page!!</button></a>
         <a href='meme.html'><button>MEMEs!!</button></a>
-        <a href='river.html'><button>comeing soon</button></a>
+        <a href='river.html' ><button>river skippy</button></a>
+        <a href='magicbutton.html'><button>magicbotton</button></a>
       </div>
         <div class="center"
     <title>t-lieth</title>
@@ -78,13 +79,16 @@
         <p><font color="white">THE TRAIL OF MORRIGEN CROW (Jessaca Townsend)<br> PERCY JACKSON AND THE LIGHTENING THIEF (rick riodin) <br> MORTAL ENGINES (Phillip Reev) <br> MAGNUS CHASE (rick riodin)<br>THE CANE CRONICLES (rick riodin)<br>HARRY POTTER (no more info needed)<br>wings of fire book 1,2,3,4,5,6,7,8,9,10,11,12,13(tui t. sutherlan)</font></p>
 
         <h1><font color="white">Wont a challeng?</font></h1>
-        <p><font color="purple">1.have you ever made a clay  ram? </font><img class="ram" src="ram.jpg" alt="challeng"><labelclass="container"> One <input type="checkbox"> <span class="checkmark"></span></label></p>
-
-        <p><font color="blue">2.or do you wont to do something on thescreen how bout finish 50 games of fill! download on tablet,phone,ipad,andipod</font><label class="container"> two <input type="checkbox"> <spanclass="checkmark"></span> </label></p>
-        <p><font color="darkgreen">3.have you ever nitted a scarf extra challeng make it have a five diforentcolour</font><label class="container"> three <input type="checkbox"> <spanclass="checkmark"></span> </label></p>
-        <p><font color="pink">4.you think you can make a tree hut?</font><label class="container"> four <inputtype="checkbox"> <span class="checkmark"></span> </labal</p>
+        <p id="are"><font color="purple">1.have you ever made a clay  ram? </font><img class="ram" src="ram.jpg" alt="challeng"><labelclass="container"> One <input type="checkbox"> <span class="checkmark"></span></label></p>
+        <p id="are"><font color="blue">2.or do you wont to do something on thescreen how bout finish 50 games of fill! download on tablet,phone,ipad,andipod</font><label class="container"> two <input type="checkbox"> <spanclass="checkmark"></span> </label></p>
+        <p id="are"><font color="darkgreen">3.have you ever nitted a scarf extra challeng make it have a five diforentcolour</font><label class="container"> three <input type="checkbox"> <spanclass="checkmark"></span> </label></p>
+        <p id="are"><font color="pink">4.you think you can make a tree hut?</font><label class="container"> four <inputtype="checkbox"> <span class="checkmark"></span> </labal</p>
       </div>
     </div>
+
+    <script src="jquerydonottouch.js"></script>
+    <script src="magic.js"></script>
+
 
     <div class="bottom">
       <h3><font color="white">MEME OF THE WEEK</font></h3>
