--- a/river.html
+++ b/river.html
@@ -11,7 +11,7 @@
           align-items: center;
           min-height: 100vh;
           margin: 0;
-          background: turquoise;
+          background: MediumSpringGreen ;
           color: 	darkviolet;
         }
 
@@ -22,7 +22,7 @@
         }
 
         body {
-          background-image: url("p.jpeg");
+          background-image: url("gifie.gif");
           background-size: 100%;
           background-repeat: no-repeat;
           background-attachment: fixed;
@@ -41,17 +41,17 @@
 
         .intro-block {
           width: 100%;
-          background-color: b
+          background-color: MediumSpringGreen 
         }
         </style>
-
-<head>
 
 
 </head>
 <HEADer>
     <H1><font color="goldenrod"> WELCOME TO RIVER SKIPPYS ADVENTURE!!!!</font></H1>
-    <a href='index.html'><button>back to home page !!</button></a>
+    <a href='index.html'><button>back to home page !!<br></button></a>
+    <img src="" alt="">
+    <img src="" alt="">
 
 
 </HEADer>
@@ -64,4 +64,16 @@
         <h1>welcome to riverskippy's blog !!!!!!!</h1>
         <p>in this page you will leran the amazing life of riverskippy's (the cat) life and how cute cats can realy be (poeple how like dogs BE GONE!!) </p>
 
+        
+        <img src="le.jpeg.jpg" alt="skippy looking cute" width="670" height="650">
+        <img src="pu.jpeg.jpg" alt="riverskippy smelling choclet raper" width="670" height="650">
+        <h4><font color="white">these are were the name of the photos will be:</font></h4>
+        <h6><font color="white">left side: river skippy casualsettings</font></h6>
+        <h6><font color="white">right side: river skippy smelling a empty chocolate raper</font><h6> 
+        <img src="moco.jpeg.jpg" alt="riverskippy smelling choclet raper" width="670" height="650">
+        <img src="foe.jpeg.jpg" alt="riverskippy smelling choclet raper" width="670" height="650">
+        <h6><font color="white">left side: samurai skippy<font></h6>
+        <h6><font color="white">right side: I want a pat<font></h6>
+        <img src="mamamjpeg.jpg" alt="riverskippy smelling choclet raper" width="670" height="650">
+         <img src="banan.jpeg.jpg" alt="riverskippy smelling choclet raper" width="670" height="650">
 </body>
