--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <!-- <link rel="stylesheet" type="text/css" href="main.css"> -->
 
     <style>
+    .button {
+  background-color: #f44336; 
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 8px;
+}
 
       .center {
         text-align: center;
@@ -80,7 +91,9 @@
 
         <h1><font color="white">Wont a challeng?</font></h1>
         <p id="are"><font color="purple">1.have you ever made a clay  ram? </font><img class="ram" src="ram.jpg" alt="challeng"><labelclass="container"> One <input type="checkbox"> <span class="checkmark"></span></label></p>
-        <p id="are"><font color="blue">2.or do you wont to do something on thescreen how bout finish 50 games of fill! download on tablet,phone,ipad,andipod</font><label class="container"> two <input type="checkbox"> <spanclass="checkmark"></span> </label></p>
+
+        <p id="kik"><font color="blue">2.or do you wont to do something on thescreen how bout finish 50 games of fill! download on tablet,phone,ipad,andipod</font><label class="container"> two <input type="checkbox"> <spanclass="checkmark"></span> </label></p>
+
         <p id="are"><font color="darkgreen">3.have you ever nitted a scarf extra challeng make it have a five diforentcolour</font><label class="container"> three <input type="checkbox"> <spanclass="checkmark"></span> </label></p>
         <p id="are"><font color="pink">4.you think you can make a tree hut?</font><label class="container"> four <inputtype="checkbox"> <span class="checkmark"></span> </labal</p>
       </div>
