--- a/gamepage.html
+++ b/gamepage.html
@@ -1,8 +1,15 @@
     <html>
     <head>
+    <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
     <style>
 
+  
+
+     
       body {
+
+        font-family: 'Orbitron', sans-serif;
+
         background-color: lawngreen;
       }
 
@@ -15,6 +22,7 @@
 
       <header>
         <h1>game page<h1>
+          <a href='index.html'><button><h6>back to home page !!</h6></button></a>
       </header>
       <font face="Allura" color="green">Welcome to the game page!</font>
 
@@ -23,10 +31,10 @@
         <!--<iframe allowtransparency="true" width="120" height="70" src="https://scratch.mit.edu/projects/embed/290112419/?autostart=false" frameborder="0" allowfullscreen></iframe>-->
         <center><a href="./oof cliker page two.html"><img src="2019-03-14.png" width="300" height="300" alt="Oof clicker"><h1>oof cliker</h1> <p> Welcome to OOF CLIKER,<br> hope you like this game!!!!!!  <br>Fun fact this  game was made in <br>scratch</p><p>JK</p></a></center>
         <center><a href="fruit.html"><img src="5.jpeg" width="300" height="300" alt="WHAT FRUIT ARE YOU???!!!!"><h1>what fruit are you??</h1><p>in this game you will find out what frurit you are, by ansering the quston we will determin what fruit you are HAVE FUN <p></a></center>
-          <center><a href="mana.html"><img src="shaf.png" width="300" height="300" alt="Oof clicker"><h1>cube miner</h1> <p> welcome to miners life,<br>  <br>Fun fact this  game was made in scratch<br></p><p>JK</p></a></center>
+        <center><a href="mana.html"><img src="shaf.png" width="300" height="300" alt="Oof clicker"><h1>cube miner</h1> <p> welcome to miners life,<br>  <br>Fun fact this  game was made in scratch<br></p><p>JK</p></a></center>
 
 
-         <a href='index.html'><button>back to home page !!</button></a>
+       
     </body>
     </html>
     <style>
