--- a/index.html
+++ b/index.html
@@ -3,25 +3,45 @@
 
   <head>
     <meta charset="utf-8"/>
+
+    <!-- my fonts : -->
+    <link href="https://fonts.googleapis.com/css?family=Lexend+Exa&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rajdhani&display=swap" rel="stylesheet">
+    <!-- end of font list -->
     <title>t-lieth</title>
     <!-- <link rel="stylesheet" type="text/css" href="main.css"> -->
-
     <style>
-    .button {
-  background-color: #f44336; 
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  border-radius: 8px;
-}
+      .button {
+        background-color: #f44336; 
+        border: none;
+        color: greenyellow
+        padding: 20px;
+        font-family: 'Indie Flower', cursive;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block; 
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        .button5 border-radius: 50%;
+      }
+
+      header {
+        font-family: 'Lexend Exa', sans-serif;
+      }
 
       .center {
         text-align: center;
       }
+
+      body {
+        font-family: 'Rajdhani', sans-serif;
+
+
+      }
+
+
 
       header {
         display: flex;
@@ -57,13 +77,10 @@
         text-align:  center;
       }
 
-
-
     </style>
   </head>
 
   <body>
-
 
     <header>
       <h1><font color="white">Welcome to t-leith</font></h1>
@@ -71,19 +88,21 @@
     </header>
 
     <div id="backgroundText">
-        <a href='gamepage.html'><button>Game page!!</button></a>
-        <a href='meme.html'><button>MEMEs!!</button></a>
-        <a href='river.html' ><button>river skippy</button></a>
-        <a href='magicbutton.html'><button>magicbotton</button></a>
-      </div>
-        <div class="center"
-    <title>t-lieth</title>
+        <button class="button"><a href='gamepage.html'>Game page!!</a></button>
+        <button class="button"><a href='meme.html'>memes!!</a></button>
+        <button class="button"><a href='river.html'>river skippy!!</a></button> 
+        <button class="button"><a href='magicbotton.html'>magic button!!</a></button>
+       
+    </div>
 
-    <h1><font color="glod"><welcome</font></h1>
-    <p><font color="white">in this website you will be very entertained. where have got lots of stuff for you to do<br>. like if you go on our games page you can paly meny meny games for days and we can show you some acktivatys that you could do at home with frends.</font></p>
-    <p><font color="white">so go on and click those botton!!</font></p>
+    <div class="center"
+      <title>t-lieth</title>
 
-    <div class="intro-block">
+      <h1><font color="glod"><welcome</font></h1>
+      <p><font color="white">in this website you will be very entertained. where have got lots of stuff for you to do<br>. like if you go on our games page you can paly meny meny games for days and we can show you some acktivatys that you could do at home with frends.</font></p>
+      <p><font color="white">so go on and click those botton!!</font></p>
+
+      <div class="intro-block">
 
         <h6><font color="white">activities</font></h6>
         <h2><font color="white">ACTIVITES for the week:<br>HAVE YOU RAED THIS BOOK????? see thes books below IF YOU ARE BORED read thes books </font></h2>
@@ -97,16 +116,16 @@
         <p id="are"><font color="darkgreen">3.have you ever nitted a scarf extra challeng make it have a five diforentcolour</font><label class="container"> three <input type="checkbox"> <spanclass="checkmark"></span> </label></p>
         <p id="are"><font color="pink">4.you think you can make a tree hut?</font><label class="container"> four <inputtype="checkbox"> <span class="checkmark"></span> </labal</p>
       </div>
+
+    </div>
+
+    <div class="bottom">
+      <h3><font color="white">MEME OF THE WEEK</font></h3>
+      <img src="cos.webp" alt="memes">
     </div>
 
     <script src="jquerydonottouch.js"></script>
     <script src="magic.js"></script>
-
-
-    <div class="bottom">
-      <h3><font color="white">MEME OF THE WEEK</font></h3>
-      <img src="u.webp" alt="memes">
-    </div>
 
   </body>
 </html>
