--- a/magicbutton.html
+++ b/magicbutton.html
@@ -8,7 +8,7 @@
 
 <body>
   
-    <button id="cow">
+    <button id="fart">
       <h1>reload button</h1><h6>(click me)</h6>
     </button>
 
@@ -24,7 +24,9 @@
       <h1></h1>
       <font face="Bonbon" color="green">welcome to MAGICBUTTON</font>
 
-      <button id="cow"><h3>the first magic button!!!!</h3><h6>(click me)</h6></button></a>
+      <button id="cow">
+        <h3>the first magic button!!!!</h3><h6>(click me)</h6>
+      </button></a>
     
     </div>
 
@@ -34,6 +36,20 @@
     
 
 <style>
+
+.button {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
  .center {
         text-align: center;
       }
