--- a/river.html
+++ b/river.html
@@ -46,9 +46,8 @@
         </style>
 
 
-</head>
+
 <HEADer>
-    <H1><font color="goldenrod"> WELCOME TO RIVER SKIPPYS ADVENTURE!!!!</font></H1>
     <a href='index.html'><button>back to home page !!<br></button></a>
     <img src="" alt="">
     <img src="" alt="">
@@ -61,6 +60,7 @@
 </head>
 
 <body>
+  <div class="center">
         <h1>welcome to riverskippy's blog !!!!!!!</h1>
         <p>in this page you will leran the amazing life of riverskippy's (the cat) life and how cute cats can realy be (poeple how like dogs BE GONE!!) </p>
 
@@ -75,5 +75,6 @@
         <h6><font color="white">left side: samurai skippy<font></h6>
         <h6><font color="white">right side: I want a pat<font></h6>
         <img src="mamamjpeg.jpg" alt="riverskippy smelling choclet raper" width="670" height="650">
-         <img src="banan.jpeg.jpg" alt="riverskippy smelling choclet raper" width="670" height="650">
+        <img src="banan.jpeg.jpg" alt="riverskippy smelling choclet raper" width="670" height="650">
+  </div>      
 </body>
