--- a/river.html
+++ b/river.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <style>
 
+     body {
+      font-family: 'Cute Font', cursive;
+
+
+      }
+      
+
+              body {
+          font-size: 325%;
+        }
+
+
         .center {
           text-align: center;
         }
@@ -48,6 +60,7 @@
 
 
 <HEADer>
+    <h1>welcome to the riverskippy(cat) page </h1>
     <a href='index.html'><button>back to home page !!<br></button></a>
     <img src="" alt="">
     <img src="" alt="">
@@ -55,7 +68,7 @@
 
 </HEADer>
 <head>
-
+  <link href="https://fonts.googleapis.com/css?family=Cute+Font&display=swap" rel="stylesheet">
 
 </head>
 
@@ -74,7 +87,7 @@
         <img src="foe.jpeg.jpg" alt="riverskippy smelling choclet raper" width="670" height="650">
         <h6><font color="white">left side: samurai skippy<font></h6>
         <h6><font color="white">right side: I want a pat<font></h6>
-        <img src="mamamjpeg.jpg" alt="riverskippy smelling choclet raper" width="670" height="650">
+        <img src="mamamjpeg.jpg" alt="riverskippy smelling choclet raper" width="670" height="650" style="image-orientation: 90deg;"></h1>
         <img src="banan.jpeg.jpg" alt="riverskippy smelling choclet raper" width="670" height="650">
   </div>      
 </body>
